# StorySync

./: README.md  compose.yaml
.github/workflows/: backend-ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PHASES.md  README.md  pyproject.toml
backend/src/app/: config.py  db.py  dependencies.py  main.py  models.py  schema_init.py  schemas.py
backend/src/app/api/: admin_users.py  audiobooks.py  auth.py  health.py  jobs.py  progress.py
backend/src/app/services/: __init__.py  audiobooks.py  auth.py  covers.py  jobs.py  metadata.py  processor.py  progress.py  queue.py  storage.py  uploads.py
backend/src/storysync_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_admin_users_api.py  test_audiobooks_api.py  test_audiobooks_service.py  test_auth_api.py  test_auth_models.py  test_auth_service.py  test_covers_service.py  test_e2e_api.py  test_metadata_service.py  test_model_constraints.py  test_processor_service.py  test_progress_api.py  test_queue_api.py  test_upload_pipeline_integration.py  test_uploads_service.py
docs/plans/: 2026-05-05-library-management-endpoints.md  2026-05-05-mvp-refactor-execution-plan.md  2026-05-05-mvp-refactor-optimisation-review.md  2026-05-06-self-hosted-auth-progress.md
